--- a/course/pom.xml
+++ b/course/pom.xml
@@ -144,9 +144,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<compilerArgument>-Amapstruct.defaultComponentModel=spring</compilerArgument>
+					<source>21</source> <target>21</target> <compilerArgument>-Amapstruct.defaultComponentModel=spring</compilerArgument>
 				</configuration>
 			</plugin>
 		</plugins>
