--- a/course/src/main/resources/application.properties
+++ b/course/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/rest
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:postgresql://dpg-d0msgb6mcj7s739jslu0-a.frankfurt-postgres.render.com/rest_db_j9co
+spring.datasource.username=rest_db_j9co_user
+spring.datasource.password=dxrdXLcXE3f0GYVLBcis4WUXIjxbgsvC
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
