--- a/course/src/main/resources/application.properties
+++ b/course/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:postgresql://dpg-d0msgb6mcj7s739jslu0-a.frankfurt-postgres.render.com/rest_db_j9co
-spring.datasource.username=rest_db_j9co_user
-spring.datasource.password=dxrdXLcXE3f0GYVLBcis4WUXIjxbgsvC
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.application.name=course
+spring.datasource.url=jdbc:mysql://localhost:3306/rest
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
